tests/spec/emit/snapshots/a_discarded_call_stands_as_a_statement.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Meters(int)
  
  fn bump(counter: mut Ref<int>) -> int {
    counter.* += 1
    counter.*
  }
  
  fn test() {
    let mut counter = 0
    let _ = bump(&counter)
    let _ = Meters(2)
    let xs = [1, 2]
    let _ = xs.length()
    let _ = xs.append(3)
    if counter != 1 { panic("the discarded call should still run once") }
    if xs.length() != 2 { panic("append should not change the original") }
  }
---
package main

type Meters int

func bump(counter *int) int {
	*counter++
	return *counter
}

func test() {
	counter := 0
	bump(&counter)
	_ = Meters(2)
	xs := []int{1, 2}
	_ = len(xs)
	_ = append(xs[:len(xs):len(xs)], 3)
	if counter != 1 {
		panic("the discarded call should still run once")
	}
	if len(xs) != 2 {
		panic("append should not change the original")
	}
}
