tests/spec/emit/snapshots/a_local_binding_named_zero_is_called_not_zeroed.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  fn f() -> int {
    let zero = || 42
    zero()
  }
---
package main

func f() int {
	zero := func() int {
		return 42
	}
	return zero()
}
