tests/spec/emit/snapshots/a_local_binding_named_zero_keeps_its_calls_in_statement_position.snap
---
source: tests/spec/emit/zero.rs
description: |
  
  import "go:fmt"
  
  fn f() -> int {
    let zero = || {
      fmt.Println("effect")
      42
    }
    let _ = zero()
    zero()
  }
---
package main

import "fmt"

func f() int {
	zero := func() int {
		fmt.Println("effect")
		return 42
	}
	zero()
	return zero()
}
